feat(release): v1.2.0 - TypeScript improvements, UI enhancements, and refactoring
- Add comprehensive TypeScript type annotations to blog, docs, and page components
- Enhance Hero section typography and update homepage messaging
- Refactor Features and Testimonials sections with flexible heading support
- Add initials fallback for testimonial avatars
- Relocate content configuration to root level
- Simplify environment configuration with improved documentation
- Update dark and light mode screenshots

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,20 @@
 # =============================================================================
 # Virex Theme - Environment Variables
-# =============================================================================
 # Copy this file to .env and fill in your values.
-# Variables prefixed with PUBLIC_ are exposed to the client-side.
 # =============================================================================
 
 # -----------------------------------------------------------------------------
-# Site Configuration
+# Site Configuration (Required)
 # -----------------------------------------------------------------------------
 
 # The canonical URL of your site (used for SEO, sitemaps, and RSS feeds)
 SITE_URL=https://your-domain.com
 
-# -----------------------------------------------------------------------------
-# Analytics (Optional)
-# -----------------------------------------------------------------------------
+# Your site/brand name (displayed in header, footer, and meta tags)
+SITE_NAME=Your Brand
 
-# Google Analytics 4 Measurement ID
-# Get yours at: https://analytics.google.com
-# PUBLIC_GA_ID=G-XXXXXXXXXX
+# Site description for SEO and meta tags
+SITE_DESCRIPTION=Your product description here
 
-# -----------------------------------------------------------------------------
-# Form Endpoints (Optional)
-# -----------------------------------------------------------------------------
-
-# Contact form submission endpoint
-# Supports: Formspree, custom API endpoints, or leave empty for demo mode
-# Examples:
-#   Formspree: https://formspree.io/f/your-form-id
-#   Custom API: https://api.your-domain.com/contact
-# CONTACT_FORM_ENDPOINT=
-
-# Newsletter subscription endpoint
-# Supports: Mailchimp, ConvertKit, custom API endpoints
-# Examples:
-#   Mailchimp: https://your-list.us1.list-manage.com/subscribe/post
-#   ConvertKit: https://api.convertkit.com/v3/forms/your-form-id/subscribe
-# NEWSLETTER_ENDPOINT=
+# Author name for meta tags and copyright
+SITE_AUTHOR=Your Name
