feat: Add complete dashboard layout system (v1.4.0)
This release introduces a comprehensive dashboard layout system that transforms
Virex from a marketing-only theme into a complete SaaS application starter.

Dashboard Features:
- Complete responsive dashboard shell with sidebar and top navigation
- 15 reusable UI components (StatCard, DataTable, Chart, Modal, Toast, etc.)
- 7 example pages (Overview, Settings, Projects) demonstrating common SaaS patterns
- Mobile-friendly navigation with slide-in drawer
- Collapsible sidebar with icon-only mode and localStorage persistence
- Full light/dark theme support across all dashboard components

Components Added:
- Layout: DashboardShell, Sidebar, MobileNav, TopNav, UserMenu, Breadcrumbs
- UI: StatCard, DataTable, Card, Chart, Modal, Toast, EmptyState, LoadingSkeleton
- Pages: Dashboard overview, settings (profile/team/billing), projects (list/detail)

Developer Experience:
- Path aliases: @dashboard/* and @dashboard-ui/* for cleaner imports
- Centralized navigation configuration in dashboard-navigation.ts
- Sample data system with realistic placeholder data
- TypeScript types for all dashboard data models
- Chart.js integration for data visualization

Documentation:
- Comprehensive dashboard guide (docs/09-dashboard.md)
- Updated README with Key Features section highlighting all capabilities
- CHANGELOG updated with detailed v1.4.0 release notes
- Component reference with usage examples
- Authentication implementation guidance

Breaking Changes: None
Dependencies Added: chart.js@^4.4.0

Files Changed: 36 files, +10,777 insertions, -40 deletions

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "virex-astro",
   "type": "module",
-  "version": "1.3.1",
-  "description": "A production-ready SaaS Landing Page Theme for Astro",
+  "version": "1.4.0",
+  "description": "A production-ready SaaS theme for Astro. Built for those who want to go from zero to launch quickly.",
   "keywords": [
     "astro",
     "theme",
@@ -35,7 +35,8 @@
     "@iconify-json/simple-icons": "^1.2.63",
     "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.16.6",
-    "astro-icon": "^1.1.5"
+    "astro-icon": "^1.1.5",
+    "chart.js": "^4.4.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
