--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "@sections/*": ["src/components/sections/*"],
       "@ui/*": ["src/components/ui/*"],
       "@forms/*": ["src/components/forms/*"],
-      "@layout/*": ["src/components/layout/*"]
+      "@layout/*": ["src/components/layout/*"],
+      "@dashboard/*": ["src/components/dashboard/*"],
+      "@dashboard-ui/*": ["src/components/dashboard-ui/*"]
     }
   },
   "include": ["src/**/*", "astro.config.mjs", ".astro/types.d.ts"],
