Web funcionando ok

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,19 @@ SITE_DESCRIPTION=Your product description here
 
 # Author name for meta tags and copyright
 SITE_AUTHOR=Your Name
+
+# -----------------------------------------------------------------------------
+# Microsoft / Azure AD (Sign in with Microsoft)
+# Register your app at https://entra.microsoft.com/ - App registrations
+# Add redirect URI: {SITE_URL}/auth/microsoft/callback (Web platform)
+# -----------------------------------------------------------------------------
+AZURE_CLIENT_ID=
+AZURE_CLIENT_SECRET=
+# Optional: use "common" for work + personal accounts, or your tenant ID
+AZURE_TENANT_ID=common
+
+# -----------------------------------------------------------------------------
+# WhatsApp Customer Service (Lucia)
+# Add number in format: 57XXXXXXXXXX (Colombia, no + sign)
+# -----------------------------------------------------------------------------
+WHATSAPP_CUSTOMER_SERVICE=
