--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "check": "npm run lint && npm run format:check && astro check"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
     "@astrojs/mdx": "^4.0.0",
     "@astrojs/node": "^9.5.2",
     "@astrojs/rss": "^4.0.0",
